Fix wordmark size on mobile. Add map link with icon.

--- a/assets/stylesheets/sass/_layout.scss
+++ b/assets/stylesheets/sass/_layout.scss
@@ -70,7 +70,8 @@ body {
   height: auto;
 
   @include breakpoint(medium) {
-    width: auto;
+    margin-left: 10px;
+    width: 163px;
   }
 }
 
