--- a/assets/stylesheets/sass/_typography.scss
+++ b/assets/stylesheets/sass/_typography.scss
@@ -9,8 +9,10 @@ html {
 a {
   color: $white;
   text-decoration: none;
+  fill: white;
   &:hover {
     color: $red;
+    fill: $red;
   }
 }
 
